--- a/static/css/base.css
+++ b/static/css/base.css
@@ -404,7 +404,465 @@ body {
 }
 
 /* Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
+@media (min-width: 1200px) and (max-width: 1365.98px) {
+    #header{
+        background-color: #D21C18;
+        min-width: 100%;
+        min-height: 740px;
+        max-height: 1080px !important;
+    }
+    
+    #header nav a {
+        position: relative;
+        color: #ffffff !important;
+        font-size: 13px;
+        font-weight: 400;
+        margin-right: 50px;
+        z-index: 100;
+        cursor: pointer;
+    }
+
+    #menu-fixo{
+        position: fixed;
+        background-color: #D21C18;
+        z-index: 600;
+        top: 0;
+        width: 100%;
+        left: 0px;
+        margin: 0;
+        padding: 0;
+        
+    }
+    
+    #logo{
+        margin-left: 2.3%;
+        z-index: 100;
+        width: 100px;
+    }
+    
+    #select-lang-title{
+        position: relative;
+        top: 0px;
+        left: 15px;
+        color: #ffffff;
+        font-size: 12px;
+        font-weight: 600;
+    }
+
+    #change-language img{
+        width: 20px;
+    }
+    
+    #select{
+        margin: 0px !important;
+        position: relative;
+        left: 15px;
+        top: -10px;
+        border-radius: 1px !important;
+        width: 85% !important;
+    }
+    
+    option:hover{
+        background-color: blue !important;
+    }
+
+    select{
+        font-size: 13px !important;
+    }
+
+    #change-language ul{
+        background-color: #E42925 !important;
+        width: 200px;
+        height: 80px;
+        border-radius: 5px;
+        opacity: 1;
+    }
+    
+    #change-language select {
+        background-color: #E42925 !important;
+        margin: 35px 30px;
+        border-radius: 5px;
+        border: 1px solid #ffffff;
+        color: #ffffff;
+        width: 80%;
+        height: 35%;
+    }
+    
+    
+    .custom-select:focus {
+        box-shadow: none !important;
+    }
+    
+    #header h1{
+        position: relative;
+        top: 160px;
+        text-align: left;
+        letter-spacing: 0px;
+        color: #F4F0EE;
+        opacity: 1;
+        font-size: 42px;
+        color: #FFFFFF;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 700;
+    }
+    
+    #header h5{
+        position: relative;
+        text-align: left;
+        top: 170px;
+        color: #F4F0EE;
+        opacity: 1;
+        font-size: 16px;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 400;
+    }
+    
+    .form-header{
+        position: relative;
+        top: 190px;
+        width: 380px;
+        height: 40px;
+        border: 1px solid #F4F0EE;
+        border-radius: 2px;
+        z-index: 100;
+    }
+    
+    .form-header-input{
+        width: 67%;
+        height: 100%;
+        background-color: transparent;
+        border: none;
+        font-size: 14px;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 400;
+        letter-spacing: 0px;
+        color: #f7f7f7;
+        text-align: center;
+    }
+
+    .form-header-input::placeholder{
+        color: #ffffff90;
+    }
+    
+    .form-header-input:focus{
+        outline: none;
+    }
+    
+    .form-header-btn{
+        width: 33%;
+        height: 100%;
+        background-color: #ffffff;
+        border: none;
+        font-size: 16px;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 700;
+        letter-spacing: 0px;
+        color: #D21C18;
+        opacity: 1;
+    }
+    
+    #capa{
+        position: absolute;
+        z-index: 99;
+        top: -50%;
+        left: 0px;
+        width: 110%;
+    }
+    
+    .background-left{
+        position: absolute;
+        top: -55%;
+        left: 0;
+        width: 72%;
+    }
+    
+    #services{
+        min-width: 100%;
+        background-color: #F6F6F6;
+        margin-top: 0px !important;
+        padding-top: 0px !important;
+    }
+    
+    #session-1{
+        min-width: 80%;
+        min-height: 1080px;
+        
+    }
+    
+    #session-1 h2{
+        color: #E42F2B;
+        font-size: 28px !important;
+        font-weight: 700;
+        text-align: center;
+    }
+    
+    .lines-services img{
+        height: 80px !important;
+    }
+    
+    #subtitle {
+        font-size: 18px;
+        font-weight: 400;
+        text-align: center;
+        margin-bottom: 100px;
+    }
+    
+    #hr{
+        padding-top: 89px;
+        margin-bottom: 13px;
+        position: relative;
+        z-index: 500;
+    }
+    
+    .col-title{
+        font-size: 21px;
+        font-weight: 600;
+        text-align: center;
+        margin-top: 21px;
+        margin-bottom: 44px;
+    }
+    
+    .line-2{
+        margin-top: 90px;
+    }
+    
+    .form-bagagem-btn{
+        background-color: #E42925;
+        color: #ffffff;
+        font-size: 16px;
+        width: 269px;
+        height: 53px;
+        border-radius: 4px;
+        text-align: center;
+        margin-top: 109px;
+        margin-bottom: 117px;
+        border: none;
+    }
+    
+    #session-clients{
+        background-color: #FBFBFB;
+    }
+    
+    #session-clients h2{
+        color: #E42F2B;
+        font-size: 28px !important;
+        font-weight: 700;
+        text-align: center;
+        margin-bottom: 60px;
+    }
+    
+    #session-logos{
+        width: 85% !important;
+    }
+    
+    .cliente-logo{
+        text-align: center;
+        margin-bottom: 50px;
+    }
+
+    .cliente-logo img{
+        width: 80px;
+        filter: grayscale(100%) opacity(50%);
+        transition: all 0.5s linear;
+    }
+
+    .cliente-logo img:hover{
+        transition: all 0.5s linear;
+        filter: none;
+    }
+    
+    #portfolio{
+        background-color: #F6F6F6;
+    }
+    
+    #session-portfolio{
+        width: 90% !important;
+        padding-bottom: 160px;
+    }
+    
+    .portfolio-img img{
+        text-align: center;
+        margin-right: 16px;
+        width: 100%;
+    }
+    
+    #session-portfolio h2{
+        color: #E42F2B;
+        font-size: 28px !important;
+        font-weight: 700;
+        text-align: center;
+        margin-bottom: 90px;
+    }
+    
+    #about{
+        background-color: #E42925;
+        min-height: 740px;
+        max-height: 850px;
+    }
+    
+    .background-right{
+        position: absolute;
+        right: 0px;
+        z-index: 1;
+        width: 48.5%;
+    }
+    
+    #session-about h2{
+        position: relative;
+        color: #FBFBFB;
+        font-size: 28px !important;
+        font-weight: 700;
+        text-align: center;
+        z-index: 99;
+    }
+    
+    #subtitle-about {
+        position: relative;
+        font-size: 18px;
+        font-weight: 400;
+        text-align: center;
+        color: #FBFBFB;
+        z-index: 99;
+    }
+    
+    #pc{
+        position: relative;
+        z-index: 99;
+        width: 60%;
+    }
+    
+    .embed-responsive{
+        position: relative;
+        top: -517px;
+        left: 271.5px;
+        z-index: 100;
+        width: 50.9%;
+        box-sizing: border-box;
+    }
+    
+    #div-rocket{
+        background-color: #ECECEC;
+    }
+    
+    #rocket{
+        margin-top: 25%;
+        width: 60%;
+    }
+    
+    #contato h2{
+        color: #E42F2B;
+        font-size: 28px !important;
+        font-weight: 700;
+        text-align: center;
+    }
+
+    #subtitle-contact{
+        font-size: 18px;
+        font-weight: 400;
+    }
+    
+    #form-contato{
+        margin-top: 50px;
+        margin-left: 120px;
+        margin-right: 120px;
+        margin-bottom: 120px;
+    }
+
+    #contato label{
+        font-size: 13px;
+    }
+    
+    .form-contact-input{
+        width: 350px;
+        height: 30px;
+        border: 1px solid #adaaaa;
+        border-radius: 3px;
+        opacity: 1;
+        padding: 10px;
+        margin-bottom: 10px;
+    }
+    
+    .form-contact-input:focus{
+        border: 1px solid #E42925;
+        outline: none;
+    }
+    
+    .form-contact-input::placeholder{
+        color: #8f8d8d;
+        font-size: 13px;
+    }
+    
+    #contact-button{
+        width: 350px;
+        height: 35px;
+        background: #E42925 0% 0% no-repeat padding-box;
+        border: none;
+        border-radius: 3px;
+        opacity: 1;
+        font-size: 14px;
+        color: #FBFBFB;
+        margin-top: 25px;
+    }
+
+    #contact-button img{
+        width: 20px;
+        margin-right: 5px;
+    }
+    
+    #footer{
+        background-color: #E42925;
+    }
+    
+    #logo-footer{
+        margin-top: 60px;
+        width: 60%;
+    }
+    
+    #list-footer{
+        list-style: none;
+        color: #FBFBFB;
+        margin-top: 50px;
+        margin-left: 80px;
+    }
+    
+    #list-footer li{
+        font-size: 12px;
+        margin-bottom: 25px;
+    }
+
+    #list-footer img{
+        width: 20px;
+    }
+    
+    #redes-sociais-footer{
+        margin-top: 50px;
+    }
+    
+    #redes-sociais-footer img{
+        margin-right: 30px;
+        height: 40px;
+    }
+    
+    #red-bar-footer{
+        height: 40px;
+        background: #D21C18 0% 0% no-repeat padding-box;
+        opacity: 1;
+    }
+    
+    .btn-contact{
+        position: fixed;
+        bottom: 10px;
+        right: 0;
+        z-index: 200;
+    }
+    
+    .btn-contact img{
+        width: 200px;
+    }
+}
+
+/* Extra large devices (large desktops, 1366px and up) */
+/* @media (min-width: 1366px) {
     #header{
         background-color: #D21C18;
         min-width: 100%;
@@ -425,6 +883,7 @@ body {
     #logo{
         margin-left: 5.3%;
         z-index: 100;
+        width: 100px;
     }
     
     #select-lang-title{
@@ -540,6 +999,7 @@ body {
         z-index: 99;
         top: -50%;
         left: 35px;
+        width: 30%;
     }
     
     .background-left{
@@ -792,5 +1252,5 @@ body {
     .btn-contact img{
         width: 300px;
     }
-}
+} */
 
