--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,6 +7,431 @@ body {
 }
 
 
+/* /X-Small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
+    #header{
+        background-color: #D21C18;
+        width: 100%;
+        height: 900px;
+    }
+    
+    /* #header nav a {
+        position: relative;
+        color: #ffffff !important;
+        font-size: 13px;
+        font-weight: 400;
+        margin-right: 50px;
+        z-index: 100;
+        cursor: pointer;
+    } */
+
+    #menu-fixo{
+        display: none;
+    }
+    
+    /* #logo{
+        margin-left: 2.3%;
+        z-index: 100;
+        width: 100px;
+    } */
+    
+    /* #select-lang-title{
+        position: relative;
+        top: 0px;
+        left: 15px;
+        color: #ffffff;
+        font-size: 12px;
+        font-weight: 600;
+    }
+
+    #change-language img{
+        width: 20px;
+    }
+    
+    #select{
+        margin: 0px !important;
+        position: relative;
+        left: 15px;
+        top: -10px;
+        border-radius: 1px !important;
+        width: 85% !important;
+    }
+    
+    option:hover{
+        background-color: blue !important;
+    }
+
+    select{
+        font-size: 13px !important;
+    }
+
+    #change-language ul{
+        background-color: #E42925 !important;
+        width: 200px;
+        height: 80px;
+        border-radius: 5px;
+        opacity: 1;
+    }
+    
+    #change-language select {
+        background-color: #E42925 !important;
+        margin: 35px 30px;
+        border-radius: 5px;
+        border: 1px solid #ffffff;
+        color: #ffffff;
+        width: 80%;
+        height: 35%;
+    } */
+    
+    
+    .custom-select:focus {
+        box-shadow: none !important;
+    }
+
+    #left-side{
+        margin: 0px;
+        padding: 0px;
+    }
+    
+    #capa{
+        position: relative;
+        z-index: 99;
+        width: 100%;
+    }
+    
+    .background-left{
+        position: absolute;
+        top: -15%;
+        left: 0;
+        width: 100%;
+        height: 80%;
+        margin: 0px;
+        padding: 0px;
+    }
+
+    #header h1{
+        position: relative;
+        margin: 5px 20px;
+        text-align: left;
+        letter-spacing: 0px;
+        color: #F4F0EE;
+        font-size: 34px;
+        font-weight: 700;
+    }
+    
+    #header h5{
+        position: relative;
+        text-align: left;
+        color: #F4F0EE;
+        opacity: 1;
+        font-size: 18px;
+        margin: 5px 20px;
+        font-weight: 400;
+    }
+    
+    .form-header{
+        position: relative;
+        width: 90%;
+        margin: auto;
+        height: 60px;
+        border: 2px solid #F4F0EE;
+        border-radius: 2px;
+        z-index: 100;
+        margin: 30px auto;
+    }
+    
+    .form-header-input{
+        width: 100%;
+        height: 100%;
+        background-color: transparent;
+        border: none;
+        font-size: 18px;
+        font-weight: 400;
+        letter-spacing: 0px;
+        color: #f7f7f7;
+        text-align: center;
+    }
+
+    .form-header-input::placeholder{
+        color: #ffffff90;
+        font-size: 18px;
+    }
+    
+    .form-header-input:focus{
+        outline: none;
+    }
+    
+    .form-header-btn{
+        width: 100%;
+        height: 100%;
+        margin-top: 30px;
+        background-color: #ffffff;
+        border: none;
+        font-size: 18px;
+        font-weight: 700;
+        letter-spacing: 0px;
+        color: #D21C18;
+    }
+
+    .btn-contact{
+        z-index: 200;
+        margin-top: 50px;
+        margin-left: 20px;
+    }
+    
+    .btn-contact img{
+        width: 100%;
+    }
+    
+    #services{
+        box-sizing: border-box;
+        padding: 20px;
+        min-width: 100%;
+        background-color: #FFFFFF;
+        margin-top: 0px !important;
+        padding-top: 0px !important;
+    }
+    
+    #session-1{
+        min-width: 80%;
+        min-height: 1080px;
+        
+    }
+
+    #hr{
+        padding-top: 50px;
+        margin-bottom: 13px;
+        position: relative;
+        z-index: 500;
+    }
+    
+    #session-1 h2{
+        color: #E42F2B;
+        font-size: 28px !important;
+        font-weight: 700;
+        text-align: center;
+    }
+
+    #subtitle {
+        font-size: 21px;
+        font-weight: 400;
+        text-align: center;
+        margin-bottom: 100px;
+    }
+    
+    .lines-services img{
+        height: 80px !important;
+        margin-top: 20px !important;
+    }
+    
+    .col-title{
+        font-size: 24px;
+        font-weight: 600;
+        text-align: center;
+        margin-top: 21px;
+    }
+
+    .lines-services p{
+        font-size: 18px;
+    }
+    
+    .line-2{
+        margin-top: 20px;
+    }
+    
+    .form-bagagem-btn{
+        background-color: #E42925;
+        color: #ffffff;
+        font-size: 18px;
+        width: 80%;
+        height: 53px;
+        border-radius: 4px;
+        text-align: center;
+        margin-top: 40px;
+        margin-bottom: 40px;
+        border: none;
+    }
+    
+    #session-clients{
+        display: none;
+    }
+
+    
+    #portfolio{
+        background-color: #F6F6F6;
+    }
+    
+    #session-portfolio{
+        width: 90% !important;
+        padding-bottom: 160px;
+    }
+    
+    .portfolio-img img{
+        text-align: center;
+        margin-top: 25px;
+        width: 100%;
+    }
+    
+    #session-portfolio h2{
+        color: #E42F2B;
+        font-size: 28px !important;
+        font-weight: 700;
+        text-align: center;
+        margin-bottom: 90px;
+    }
+    
+    #about{
+        background-color: #E42925;
+        width: 100%;
+        height: 610px;
+    }
+    
+    .background-right{
+        display: none;
+    }
+    
+    #session-about h2{
+        position: relative;
+        color: #FBFBFB;
+        font-size: 28px !important;
+        font-weight: 700;
+        text-align: center;
+        z-index: 99;
+    }
+    
+    #subtitle-about {
+        position: relative;
+        font-size: 21px;
+        font-weight: 400;
+        text-align: center;
+        color: #FBFBFB;
+        z-index: 99;
+    }
+    
+    #pc{
+        position: relative;
+        z-index: 99;
+        width: 100%;
+    }
+    
+    .embed-responsive{
+        position: relative;
+        top: -58%;
+        left: 7%;
+        z-index: 100;
+        width: 86%;
+    }
+    
+    #div-rocket{
+        display: none;
+    }
+    
+    #contato h2{
+        color: #E42F2B;
+        font-size: 28px !important;
+        font-weight: 700;
+        text-align: center;
+    }
+
+    #subtitle-contact{
+        font-size: 21px;
+        font-weight: 400;
+    }
+    
+    #form-contato{
+        margin-top: 30px;
+        margin-left: 35px;
+        margin-right: 20px;
+        margin-bottom:70px;
+    }
+
+    #contato label{
+        font-size: 16px;
+    }
+    
+    .form-contact-input{
+        width: 95%;
+        height: 40px;
+        border: 1px solid #adaaaa;
+        border-radius: 3px;
+        opacity: 1;
+        padding: 10px;
+        margin-bottom: 10px;
+    }
+    
+    .form-contact-input:focus{
+        border: 1px solid #E42925;
+        outline: none;
+    }
+    
+    .form-contact-input::placeholder{
+        color: #8f8d8d;
+        font-size: 14px;
+    }
+    
+    #contact-button{
+        width: 95%;
+        height: 50px;
+        background: #E42925 0% 0% no-repeat padding-box;
+        border: none;
+        border-radius: 3px;
+        opacity: 1;
+        font-size: 16px;
+        color: #FBFBFB;
+        margin-top: 25px;
+    }
+
+    #contact-button img{
+        width: 20px;
+        margin-right: 5px;
+    }
+    
+    #footer{
+        background-color: #E42925;
+    }
+
+    #footer div{
+        text-align: center !important;
+    }
+    
+    #logo-footer{
+        margin-top: 60px;
+        width: 60%;
+    }
+    
+    #list-footer{
+        list-style: none;
+        color: #FBFBFB;
+        margin-top: 50px;
+        text-align: left !important;
+    }
+    
+    #list-footer li{
+        font-size: 14px;
+        margin-bottom: 25px;
+    }
+
+    #list-footer img{
+        width: 30px;
+    }
+    
+    #redes-sociais-footer{
+        margin-top: 50px;
+    }
+    
+    #redes-sociais-footer img{
+        margin-right: 30px;
+    }
+    
+    #red-bar-footer{
+        height: 80px;
+        background: #D21C18 0% 0% no-repeat padding-box;
+        opacity: 1;
+    }
+    
+    
+}
+
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) and (max-width: 767.98px) { }
 
@@ -571,7 +996,7 @@ body {
     
     .background-left{
         position: absolute;
-        top: -55%;
+        top: -59%;
         left: 0;
         width: 72%;
     }
