--- a/static/css/base.css
+++ b/static/css/base.css
@@ -512,6 +512,9 @@ body {
 
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199.98px) {
+    #header-nav{
+        display: none;
+    }
     #header{
         background-color: #D21C18;
         min-width: 100%;
@@ -902,6 +905,9 @@ body {
 
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) and (max-width: 1365.98px) {
+    #header-nav{
+        display: none;
+    }
     #header{
         background-color: #D21C18;
         min-width: 100%;
@@ -1360,6 +1366,9 @@ body {
 
 /* Extra large devices (large desktops, 1366px and up) */
 @media (min-width: 1366px) and (max-width: 2559.98px) {
+    #header-nav{
+        display: none;
+    }
     #header{
         background-color: #D21C18;
         min-width: 100%;
@@ -1772,6 +1781,9 @@ body {
 }
 
 @media (min-width: 2560px) {
+    #header-nav{
+        display: none;
+    }
     #header{
         background-color: #D21C18;
         min-width: 100%;
