--- a/static/css/base.css
+++ b/static/css/base.css
@@ -11,8 +11,8 @@ body {
 @media (max-width: 575.98px) {
 
     #header-nav{
-        background-color: #D21C18;
-        padding: 15px 5px 15px 5px;
+        background-color: #E42925;
+        padding: 10px 5px 2px 5px;
         margin: 0;
         position: fixed;
         top: 0px;
@@ -25,9 +25,9 @@ body {
         display: block;
         position: absolute;
         width: 100%;
-        top: 60px;
+        top: 40px;
         right: 0px;
-        background-color: #D21C18;
+        background-color: #E42925;
         transition: 0.6s;
         z-index: 1000;
         height: 0px;
@@ -36,7 +36,7 @@ body {
     }
 
     #nav.active #menu-nav-bg {
-        height: calc(100vh - 60px);
+        height: calc(100vh - 40px);
         visibility: visible;
         overflow-y: auto;
     }
@@ -100,6 +100,10 @@ body {
         background-color: #D21C18;
         width: 100%;
         height: 900px;
+        background-image: url(../img/bg-header-mb.png);
+        background-position: center top;
+        background-size: 100% auto;
+        background-repeat: no-repeat;
     }
     
 
@@ -246,9 +250,7 @@ body {
     }
 
     .btn-contact{
-        z-index: 200;
-        margin-top: 50px;
-        margin-left: 20px;
+        display: none;
     }
     
     .btn-contact img{
@@ -456,6 +458,13 @@ body {
     #contact-button img{
         width: 20px;
         margin-right: 5px;
+    }
+
+    .btn-contact-mb{
+        position: fixed;
+        bottom: 10px;
+        right: 10px;
+        z-index: 5000;
     }
     
     #footer{
