alterando posição footer redes sociais

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -472,11 +472,12 @@ body {
     }
 
     #footer div{
-        text-align: center !important;
+        text-align: left !important;
     }
     
     #logo-footer{
         margin-top: 60px;
+        margin-left: 40px;
         width: 60%;
     }
     
@@ -497,11 +498,17 @@ body {
     }
     
     #redes-sociais-footer{
-        margin-top: 50px;
+        margin-top: 10px;
+        padding-left: 40px;
+    }
+
+    #redes-sociais-footer p{
+        margin-left: 0px !important;
+        margin-top: 15px;
     }
     
     #redes-sociais-footer img{
-        margin-right: 30px;
+        margin-left: 20px;
     }
     
     #red-bar-footer{
